# Telex-AI-agent

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: countries.py  di.py
app/core/: config.py  logging_config.py
app/schemas/: telex.py
app/services/: country_service.py  llm_client.py  scheduler_service.py  telex_client.py
country_agent_a2a.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
env/: pyvenv.cfg
fastapi-country-llm/: .env.example  README.md  pyproject.toml  requirements.txt
fastapi-country-llm/app/: main.py
fastapi-country-llm/app/api/: deps.py
fastapi-country-llm/app/api/v1/: countries.py
fastapi-country-llm/app/core/: config.py  llm_client.py
fastapi-country-llm/app/models/: country.py
fastapi-country-llm/app/schemas/: country.py
fastapi-country-llm/app/services/: country_service.py
fastapi-country-llm/app/utils/: country_data.py
fastapi-country-llm/tests/: test_countries.py
