[project]
name = "country-agent-a2a"
version = "0.1.0"
description = "A country cultural agent A2A protocol support"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.12",
    "pydantic-ai>=0.4.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "redis[hiredis]>=6.0.0",
    "jsonrpcclient>=4.0.3",
    "chess>=1.11.2",
    "cairosvg>=2.7.1",
    "minio>=7.2.15"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
